add_executable(codegen codegen.cpp momEncodings.cpp implementation/RTFederateEncodings.cpp implementation/RTFederateObjects.cpp implementation/RTFederateInteractions.cpp)
if (UNIX)
target_link_libraries(codegen rti1516ev fedtime1516ev OpenRTI -lpthread)
else()
target_link_libraries(codegen rti1516ev fedtime1516ev OpenRTI)
endif()
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
